--- a/index.html
+++ b/index.html
@@ -4,30 +4,32 @@
 	<meta charset="UTF-8">
 	<title>のうりんむら 学園祭特設ページ</title>
 	<link rel="stylesheet" href="style.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+	<script src="script.js"></script>
 </head>
 <body>
 <div class="linkicons">
 <div class="icon">
 	<a href="http://nourinmura-tsukuba.jimdo.com/%E3%81%AE%E3%81%86%E3%82%8A%E3%82%93%E3%82%80%E3%82%89%E3%81%A8%E3%81%AF">
-	<img src="img/村史.png" alt="のうりんむらとは">
+	<img src="img/murasi_pc.png" alt="のうりんむらとは">
 	<div class="mask">
-		<div class="caption">のうりんむらとは</div>
+		<div class="caption" id="murasi">のうりんむらとは</div>
 	</div>
 	</a>
 </div>
 <div class="icon">
 	<a href="http://nourinmura-tsukuba.jimdo.com/%E3%81%84%E3%82%82%E7%8F%AD">
-	<img src="img/芋.png" alt="いも班紹介" />
+	<img src="img/imo_pc.png" alt="いも班紹介" />
 	<div class="mask">
-		<div class="caption">いも班</div>
+		<div class="caption" id="imo">いも班</div>
 	</div>
 	</a>
 </div>
 <div class="icon">
 	<a href="http://nourinmura-tsukuba.jimdo.com/%E9%87%8E%E8%8F%9C%E7%8F%AD">
-	<img src="img/野菜.png" alt="野菜班紹介" />
+	<img src="img/yasai_pc.png" alt="野菜班紹介" />
 	<div class="mask">
-		<div class="caption">野菜班</div>
+		<div class="caption" id="yasai">野菜班</div>
 	</div>
 	</a>
 </div>
@@ -40,25 +42,25 @@
 <div class="linkicons">
 <div class="icon">
 	<a href="http://nourinmura-tsukuba.jimdo.com/%E3%81%94%E3%81%AF%E3%82%93%E7%8F%AD">
-	<img src="img/ご飯.png" alt="ごはん班紹介" />
+	<img src="img/gohan_pc.png" alt="ごはん班紹介" />
 	<div class="mask">
-		<div class="caption">ごはん班</div>
+		<div class="caption" id="gohan">ごはん班</div>
 	</div>
 	</a>
 </div>
 <div class="icon">
 	<a href="http://nourinmura-tsukuba.jimdo.com/%E8%82%89%E7%8F%AD">
-	<img src="img/肉.png" alt="肉班紹介" />
+	<img src="img/niku_pc.png" alt="肉班紹介" />
 	<div class="mask">
-		<div class="caption">肉班</div>
+		<div class="caption" id="niku">肉班</div>
 	</div>
 	</a>
 </div>
-<div class="icon">
+<div class="icon" id="milk">
 	<a href="http://nourinmura-tsukuba.jimdo.com/%E7%89%9B%E4%B9%B3%E7%8F%AD">
-	<img src="img/牛乳.png" alt="牛乳班紹介" />
+	<img src="img/gyunyu_pc.png" alt="牛乳班紹介" />
 	<div class="mask">
-		<div class="caption">牛乳班</div>
+		<div class="caption" id="gyunyu">牛乳班</div>
 	</div>
 	</a>
 </div>
