--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="linkicons">
 <div class="icon">
 	<a href="http://nourinmura-tsukuba.jimdo.com/%E3%81%AE%E3%81%86%E3%82%8A%E3%82%93%E3%82%80%E3%82%89%E3%81%A8%E3%81%AF">
-	<img src="img/murasi_pc.png" alt="のうりんむらとは">
+	<img src="img/murasi_sp.png" alt="のうりんむらとは">
 	<div class="mask">
 		<div class="caption" id="murasi">のうりんむらとは</div>
 	</div>
@@ -19,7 +19,7 @@
 </div>
 <div class="icon">
 	<a href="http://nourinmura-tsukuba.jimdo.com/%E3%81%84%E3%82%82%E7%8F%AD">
-	<img src="img/imo_pc.png" alt="いも班紹介" />
+	<img src="img/imo_sp.png" alt="いも班紹介" />
 	<div class="mask">
 		<div class="caption" id="imo">いも班</div>
 	</div>
@@ -27,7 +27,7 @@
 </div>
 <div class="icon">
 	<a href="http://nourinmura-tsukuba.jimdo.com/%E9%87%8E%E8%8F%9C%E7%8F%AD">
-	<img src="img/yasai_pc.png" alt="野菜班紹介" />
+	<img src="img/yasai_sp.png" alt="野菜班紹介" />
 	<div class="mask">
 		<div class="caption" id="yasai">野菜班</div>
 	</div>
@@ -42,7 +42,7 @@
 <div class="linkicons">
 <div class="icon">
 	<a href="http://nourinmura-tsukuba.jimdo.com/%E3%81%94%E3%81%AF%E3%82%93%E7%8F%AD">
-	<img src="img/gohan_pc.png" alt="ごはん班紹介" />
+	<img src="img/gohan_sp.png" alt="ごはん班紹介" />
 	<div class="mask">
 		<div class="caption" id="gohan">ごはん班</div>
 	</div>
@@ -50,7 +50,7 @@
 </div>
 <div class="icon">
 	<a href="http://nourinmura-tsukuba.jimdo.com/%E8%82%89%E7%8F%AD">
-	<img src="img/niku_pc.png" alt="肉班紹介" />
+	<img src="img/niku_sp.png" alt="肉班紹介" />
 	<div class="mask">
 		<div class="caption" id="niku">肉班</div>
 	</div>
@@ -58,7 +58,7 @@
 </div>
 <div class="icon" id="milk">
 	<a href="http://nourinmura-tsukuba.jimdo.com/%E7%89%9B%E4%B9%B3%E7%8F%AD">
-	<img src="img/gyunyu_pc.png" alt="牛乳班紹介" />
+	<img src="img/gyunyu_sp.png" alt="牛乳班紹介" />
 	<div class="mask">
 		<div class="caption" id="gyunyu">牛乳班</div>
 	</div>
