--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
 <div class="linkicons">
 <div class="icon">
-	<a href="http://nourinmura-tsukuba.jimdo.com/%E3%81%AE%E3%81%86%E3%82%8A%E3%82%93%E3%82%80%E3%82%89%E3%81%A8%E3%81%AF">
-	<img src="img/murasi_sp.png" alt="のうりんむらとは">
+	<a href="http://nourinmura-tsukuba.jimdo.com/%E5%AD%A6%E5%9C%92%E7%A5%AD%E3%81%AB%E3%81%A4%E3%81%84%E3%81%A6">
+	<img src="img/murasi_sp.png" alt="学園祭について">
 	<div class="mask">
-		<div class="caption" id="murasi">のうりんむらとは</div>
+		<div class="caption" id="murasi">学園祭について</div>
 	</div>
 	</a>
 </div>
